--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2263,6 +2263,12 @@ input, select, textarea {
 			#main > section.four {
 				background-color: #e8edec;
 			}
+			#main > section.five {
+				background-color: #f5fafa;
+			}
+			#main > section.six {
+				background-color: #F5FFFA;
+			}
 
 /* Wide */
 
