--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1757,7 +1757,7 @@ input, select, textarea {
 		.image.avatar48 {
 			width: 80px;
 			height: 80px;
-			background: #f00;
+			background: #fff;
 		}
 
 			.image.avatar48 img {
